# AI_Hackathon2

./: README.md
Slack_bot_dynamic/: api_service.py  bot_factory.py  bot_storage.py  example_usage.py  main.py  requirements.txt  test_agent.py
docs/: LibraryGuide.md
internal-library/: pyproject.toml
internal-library/docs/: PRD.md
internal-library/src/nvidia_datamesh/: config.py  llm_preparation.py  pipeline.py
internal-library/src/nvidia_datamesh/ingestion/: __init__.py  base_source.py
internal-library/src/nvidia_datamesh/transformations/: schema_alignment.py
server/: main.py  requirements.txt
src/nvidia_datamesh/: __init__.py
src/nvidia_datamesh/ingestion/: api_source.py  csv_source.py
src/nvidia_datamesh/transformations/: __init__.py
